--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,3 +14,4 @@ jobs:
         LAST_NAME: Octocat
       run: |
         echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+        touch test_cl.txt
