--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,14 @@
 name: Greeting from Mona
-on: push
-
+on: 
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '00 0 * * *'
 jobs:
   my-job:
     name: My Job
     runs-on: ubuntu-latest
     steps:
-    - name: Print a greeting
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Octocat
-      run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
-        touch test_cl.txt
+    - name: Checkout code
+      uses: actions/checkout@main
+    - name: test my profile
+      run: echo $PATH
